--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "The New York System of bus and trains - Metro Transit Authority - provides its data for downloading through a csv files. One of the available information is the data of ticket gates which contains weekly logs of cumulative entries and exits for each ticket gate for each metro station in some time interval.\n",
+    "The New York System of bus and trains - Metro Transit Authority - provides its data for download through csv files. One of the available information is the data of ticket gates which contains weekly logs of cumulative entries and exits for each ticket gate for each metro station in some time interval.\n",
     "\n",
     "\n",
     "In this project, I will only use information about the ticket gates available at: http://web.mta.info/developers/turnstile.html.\n",
@@ -21,14 +21,14 @@
    "source": [
     "# About this project\n",
     "\n",
-    "In this project, I will use basic tasks of acquisition, data cleaning and throughout this process we will discover essential things about the data.\n",
+    "In this project, I will acquire data, clean it and throughout the process we will discove things about the data.\n",
     "\n",
-    "The project's purpose is explore the relationship between ticket gates' data of NYC metro and the weather at the day analysed. For that, aside the metro data, we will need the climate data of NYC.\n",
+    "The project's purpose is explore the relationship between NYC's subway use and the weather on a specific day. For that, apart from data from the subway, we will need data about the climate on the very day.\n",
     "\n",
     "The main points of this project are: \n",
     "- Data collection from internet;\n",
-    "- Uses of statistcal data for project analysing.\n",
-    "- Data manipulation and creating simple graphics with Pandas."
+    "- Data Analysis.\n",
+    "- Data manipulation and creation of simple graphics with Pandas."
    ]
   },
   {
