--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "In this project, I will acquire data, clean it and throughout the process we will discove things about the data.\n",
     "\n",
-    "The project's purpose is explore the relationship between NYC's subway use and the weather on a specific day. For that, apart from data from the subway, we will need data about the climate on the very day.\n",
+    "The project's purpose is to explore how the NYC's subway use and the weather on a specific day relate. For that, apart from data from the subway, we will need data about the climate on the very day.\n",
     "\n",
     "The main points of this project are: \n",
     "- Data collection from internet;\n",
