--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code will plot two histograms on the same axis to show when is raining vs when is not raining.    "
+    "This code will plot two histograms on the same axis to show when it is raining vs when it is not raining.    "
    ]
   },
   {
