--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "### Data Analysis \n",
     "\n",
-    "To understand the relation between the Subway movement and the weather, we need to complement the archive's data already downloaded with thw weather's data.\n",
+    "To understand the link between the use of the Subway and the weather, we need to combine the archive's data already downloaded with the weather data.\n",
     "\n",
     "The weather's data can be accessed by the link: https://s3.amazonaws.com/content.udacity-data.com/courses/ud359/turnstile_data_master_with_weather.csv\n",
     "```\n",
