--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "To understand the link between the use of the Subway and the weather, we need to combine the archive's data already downloaded with the weather data.\n",
     "\n",
-    "The weather data can be accessed by the link: https://s3.amazonaws.com/content.udacity-data.com/courses/ud359/turnstile_data_master_with_weather.csv\n",
+    "The weather data can be accessed via the link: https://s3.amazonaws.com/content.udacity-data.com/courses/ud359/turnstile_data_master_with_weather.csv\n",
     "```\n",
     "\n"
    ]
