--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -681,8 +681,8 @@
     "def entries_histogram(turnstile_weather):\n",
     "    \n",
     "    plt.figure()\n",
-    "    x = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 1]).hist(label=\"Com chuva\") # your code here to plot a historgram for hourly entries when it is raining\n",
-    "    y = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 0]).hist(label=\"Sem chuva\", alpha = 0.5) # your code here to plot a histogram for hourly entries when it is not raining\n",
+    "    x = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 1]).hist(label=\"Com chuva\") \n",
+    "    y = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 0]).hist(label=\"Sem chuva\", alpha = 0.5) \n",
     "    plt.xlabel(\"Quantidade de Entradas.\", fontsize=13, color =\t (0.7, 0, 0.6))\n",
     "    plt.ylabel('Quantidade de vezes.', fontsize=13, color = (0.7, 0, 0.6))\n",
     "    plt.legend()\n",
