--- a/AnalyzingNYCsubwayData.ipynb
+++ b/AnalyzingNYCsubwayData.ipynb
@@ -738,7 +738,7 @@
     "    \n",
     "    with_rain_mean = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 1]).mean()\n",
     "    without_rain_mean = (turnstile_weather['ENTRIESn_hourly'][turnstile_weather['rain'] == 0]).mean()\n",
-    "    return with_rain_mean, without_rain_mean # leave this line for the grader\n",
+    "    return with_rain_mean, without_rain_mean \n",
     "\n",
     "means(Dataframe)"
    ]
